--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -1,1 +1,17 @@
+on: [push]
+jobs:
+ testing:
+   runs-on: ubuntu-latest
+   steps:
+     - uses: actions/checkout@v4
 
+
+     - uses: actions/setup-python@v5
+       with:
+         python-version: '3.13'
+
+
+     - run: pip install flask pytest
+
+
+     - run: pytest
